# pdf-to-markdown

./: .env.example  .fleet.toml  .gitignore  AGENTS.md  CLAUDE.md  README.md  launch_app.bat  launch_app.sh  launch_server.bat  launch_server.sh  pipeline.py  requirements.txt  test_vertexai.py
.claude/: settings.local.json
app/: _common.py  app.py  execute.py  execute_render.py  remote_upload.py  tab_batch.py  tab_log.py  tab_settings.py  tab_vertexai.py
app/.streamlit/: config.toml
pdf2md/: README.md  pyproject.toml
pdf2md/examples/: basic_usage.py
pdf2md/pdf2md/: __init__.py  cli.py  models.py  pipeline.py  validation.py
pdf2md/pdf2md/backends/: __init__.py  base.py  docling_backend.py  marker_backend.py  pdfplumber_backend.py
pdf2md/tests/: test_pipeline.py
pricing/: vertexai_pricing.md  vertexai_pricing_cache.json
prompts/: extraction.md  extraction_rag.md  extraction_text.md  refinement.md  refinement_rag.md
src/: __init__.py  _pymupdf.py  auth.py  batch.py  chunk_runner.py  chunker.py  classifier.py  cli.py  config.json  config.py  corrections_report.py  execute_worker.py  file_converter.py  hub_gemini_backend.py  log_streaming.py  logger_exec.py  logging_config.py  models.py  pipeline.py  postprocess.py  refinement.py  validation.py  vertexai_backend.py  vertexai_pricing.py
test/: test_pipeline.py
testing/: conftest.py  test_chunk_runner.py  test_chunker.py  test_config.py  test_corrections_report.py  test_file_converter.py  test_model_backend_consistency.py  test_models.py  test_postprocess.py  test_validation.py  test_vertexai_backend.py
(+5 files in other folders)
